# campsite-crawler

./: .env.example  .gitignore  PLAN.md  README.md  config.yaml  hanging-issue.md  pyproject.toml
src/: checker.py  main.py  notifier.py  recreationgov.py  reservecalifornia.py  search.py  state.py
tests/: test_api.py  test_checker.py
